<resources>
    <string name="app_name">自由之旅</string>
    <string name="my">我的</string>
    <string name="answers">我的问答</string>
    <string name="collect">收藏</string>
    <string name="journey">已购旅程</string>
    <string name="service">联系客服</string>
    <string name="versions">检测最新版本</string>
    <string name="speak">赞扬 / 吐槽</string>
    <string name="name">Asyllabear</string>
    <string name="title">厉害厉害厉害了我的哥</string>
    <string name="personage_show">个人信息</string>
    <string name="sex">性别</string>
    <string name="personage">Salud</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>
    <string name="login_text">你好，为了获取更好的服务</string>
    <string name="login_title">请登录自由旅行</string>
    <string name="login_or">or</string>
    <string name="login_service">登录或注册即同意自由旅行用户协议</string>
    <string name="login_weChat">微信登录</string>
    <string name="num_phone">+86</string>
    <string name="send_verify">发送验证码</string>
    <string name="login_ed_hint">请输入手机号码</string>
    <string name="verify">请输入验证码</string>
    <string name="login_qq">QQ登录</string>
    <string name="login_sing">微博登录</string>
    <string name="oauth_cancel">授权取消了</string>
    <string name="oauth_error">授权失败</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="again_send_verify">重新发送验证码</string>
    <string name="wait_please">请稍后...</string>
    <string name="yesBuy">已购买</string>
    <string name="bainji">编辑</string>
    <string name="feedback">意见反馈</string>
    <string name="version">版本检测</string>
    <string name="opened">打开</string>
    <string name="closed">关闭</string>
    <string name="follow">人关注</string>
    <string name="my_money">我的钱包</string>
    <string name="num">99</string>
    <string name="yuan">元</string>
    <string name="win">赢取奖金</string>
    <string name="jian">>></string>
    <string name="kuo">></string>
    <string name="quan">我的卡券</string>
    <string name="tujing">获取途径</string>
    <string name="tou">头像</string>
    <string name="username">用户昵称</string>
    <string name="qianming">个性签名</string>
    <string name="up_password">修改密码</string>
    <string name="band_phone">绑定手机</string>
    <string name="edit_login">退出登录</string>
    <string name="lvcheng">已购旅程</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_guanzhu">我的关注</string>
    <string name="home">首页</string>
    <string name="banmi">伴米</string>
    <string name="success">完成</string>
    <string name="verify_code">验证码是：</string>
    <string name="share">分享</string>
    <string name="path">预览路线</string>
    <string name="all">查看全部评论</string>
    <string name="experience">立即体验</string>
    <string name="my_tou">个人头像</string>
    <string name="cancel">取消</string>
    <string name="photo_album">从手机相册选择</string>
    <string name="photograph">拍照</string>
    <string name="my_follow">我的关注</string>
    <string name="f">女</string>
    <string name="m">男</string>
    <string name="u">保密</string>
    <string name="banmi_info">伴米详情</string>
    <string name="tv_follow">关注</string>
    <string name="cancel_follow">取消关注</string>
    <string name="dong">动态</string>
    <string name="xianlu">线路</string>
    <string name="allPingjia">全部评价</string>
    <string name="allzhuangtai">所有状态</string>
</resources>
