<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <View
        android:id="@+id/view"
        android:background="#FFFA6A13"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_329"
        android:layout_height="@dimen/dp_1"/>
    <ImageView
        android:src="@mipmap/phone"
        android:layout_marginLeft="@dimen/dp_31"
        android:layout_marginStart="@dimen/dp_31"
        android:layout_above="@id/view"
        android:layout_marginBottom="@dimen/dp_9"
        android:layout_width="@dimen/dp_14"
        android:layout_height="@dimen/dp_21"
        tools:ignore="ContentDescription" />
    <TextView
        android:text="@string/num_phone"
        android:textSize="@dimen/sp_14"
        android:layout_width="@dimen/dp_28"
        android:layout_height="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_53"
        android:layout_above="@id/view"
        android:layout_marginBottom="@dimen/dp_9"
        android:layout_marginStart="@dimen/dp_53"
        android:id="@+id/textView5" />
    <Button
        android:id="@+id/bt_send"
        android:text="@string/send_verify"
        android:enabled="false"
        android:textColor="#fefefe"
        android:textSize="@dimen/sp_14"
        android:background="@drawable/bg_login_button"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_263"
        android:layout_marginStart="@dimen/dp_263"
        android:layout_above="@id/view"
        android:layout_marginBottom="@dimen/dp_9"/>

    <EditText
        android:id="@+id/ed_phone"
        style="?android:attr/textViewStyle"
        android:layout_width="@dimen/dp_118"
        android:layout_height="@dimen/dp_25"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:background="@null"
        android:hint="@string/login_ed_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:text="@string/login_text"
        android:layout_marginStart="@dimen/dp_23"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_73"
        android:textColor="#fa6a13"
        android:lineSpacingExtra="@dimen/sp_0.72"
        android:height="@dimen/dp_22"
        android:textSize="@dimen/sp_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/login_title"
        android:layout_marginStart="@dimen/dp_23"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_104"
        android:textColor="#373737"
        android:lineSpacingExtra="@dimen/sp_1.22"
        android:height="@dimen/dp_38"
        android:textSize="@dimen/sp_27"
        android:layout_width="@dimen/dp_198"
        android:layout_height="@dimen/dp_38"/>
    <TextView
        android:text="@string/login_or"
        android:layout_marginStart="@dimen/dp_180"
        android:layout_marginLeft="@dimen/dp_180"
        android:layout_marginTop="@dimen/dp_461"
        android:textColor="#A9A9A9"
        android:lineSpacingExtra="@dimen/sp_0.63"
        android:height="@dimen/dp_20"
        android:textSize="@dimen/sp_14"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_20"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_487"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/qqLoginLinear"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_qq"
                android:src="@drawable/qq"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_marginTop="@dimen/dp_9"
                android:text="@string/login_qq"
                android:lineSpacingExtra="@dimen/dp_0_5"
                android:height="@dimen/dp_17"
                android:textColor="#4DAE46"
                android:textSize="@dimen/sp_12"
                android:layout_width="@dimen/dp_51"
                android:layout_height="@dimen/dp_17" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/singLoginLinear"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/iv_sing"
                android:src="@drawable/sina"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_marginTop="@dimen/dp_9"
                android:text="@string/login_sing"
                android:lineSpacingExtra="@dimen/dp_0_5"
                android:height="@dimen/dp_17"
                android:textColor="#4DAE46"
                android:textSize="@dimen/sp_12"
                android:layout_width="@dimen/dp_51"
                android:layout_height="@dimen/dp_17" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:background="@drawable/bg_or_left"
        android:layout_marginLeft="@dimen/dp_160"
        android:layout_marginTop="@dimen/dp_472"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_160" />
    <View
        android:background="@drawable/bg_or_right"
        android:layout_marginLeft="@dimen/dp_200"
        android:layout_marginTop="@dimen/dp_472"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_200" />
    <TextView
        android:id="@+id/login_tv_service"
        android:text="@string/login_service"
        android:layout_marginStart="@dimen/dp_83"
        android:layout_marginLeft="@dimen/dp_83"
        android:layout_marginTop="@dimen/dp_629"
        android:textColor="#999999"
        android:lineSpacingExtra="@dimen/dp_0"
        android:height="@dimen/dp_18"
        android:textColorHighlight="#00ffffff"
        android:textSize="@dimen/sp_13"
        android:layout_width="@dimen/dp_209"
        android:layout_height="@dimen/dp_18"/>
</RelativeLayout>