<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/up_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_tou"
            android:layout_marginTop="@dimen/dp_37"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/tv_name"
            android:maxLength="15"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/sp_22"
            android:textColor="#333333"
            android:layout_marginTop="@dimen/dp_42"
            android:layout_marginLeft="@dimen/dp_93"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_93" />
        <TextView
            android:id="@+id/tv_qianming"
            android:maxLength="15"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/dp_95"
            android:layout_marginTop="@dimen/dp_72"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_95" />
        <TextView
            android:id="@+id/tv_bianji"
            android:layout_marginLeft="@dimen/dp_259"
            android:layout_marginTop="@dimen/dp_91"
            android:textColor="#fa6a13"
            android:textSize="@dimen/sp_14"
            android:text="@string/bainji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_259" />
        <ImageView
            android:src="@mipmap/icon_me_bianji"
            android:layout_marginLeft="@dimen/dp_239"
            android:layout_marginTop="@dimen/dp_94"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_239"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
    <android.support.v7.widget.CardView
        app:cardElevation="@dimen/dp_5"
        app:cardCornerRadius="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_145"
        android:layout_width="@dimen/dp_288"
        android:layout_height="@dimen/dp_122"
        android:layout_marginStart="@dimen/dp_10">
        <RelativeLayout
            android:background="@drawable/bg_fa6a13toff9d53"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf">
            <TextView
                android:text="@string/my_money"
                android:textColor="#ffffff"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_17"
                android:layout_marginStart="@dimen/dp_10" />
            <TextView
                android:text="@string/num"
                android:textSize="@dimen/sp_58"
                android:textColor="#ffffff"
                android:layout_marginLeft="@dimen/dp_101"
                android:layout_marginTop="@dimen/dp_29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_101" />
            <TextView
                android:text="@string/yuan"
                android:textColor="#ffffff"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_174"
                android:layout_marginTop="@dimen/dp_60"
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_17"
                android:layout_marginStart="@dimen/dp_174" />
            <TextView
                android:text="@string/win"
                android:textColor="#ffffff"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_205"
                android:layout_marginTop="@dimen/dp_94"
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_17"
                android:layout_marginStart="@dimen/dp_205" />
            <TextView
                android:text="@string/jian"
                android:textColor="#ffffff"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_267"
                android:layout_marginTop="@dimen/dp_94"
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_17"
                android:layout_marginStart="@dimen/dp_267" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        app:cardElevation="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_286"
        android:layout_width="@dimen/dp_288"
        android:layout_height="@dimen/dp_212"
        android:layout_marginStart="@dimen/dp_10">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf">
            <View
                android:background="#f0f0f0"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_52"
                android:layout_width="@dimen/dp_268"
                android:layout_height="@dimen/dp_2"
                android:layout_marginStart="@dimen/dp_10" />
            <View
                android:background="#f0f0f0"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_105"
                android:layout_width="@dimen/dp_268"
                android:layout_height="@dimen/dp_2"
                android:layout_marginStart="@dimen/dp_10" />
            <View
                android:background="#f0f0f0"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_158"
                android:layout_width="@dimen/dp_268"
                android:layout_height="@dimen/dp_2"
                android:layout_marginStart="@dimen/dp_10" />

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/kaquan_linear"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">
                <ImageView
                    android:src="@mipmap/icon_me_kaquan"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_14"
                    android:layout_marginStart="@dimen/dp_10" />
                <TextView
                    android:textColor="#333333"
                    android:text="@string/quan"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_11" />
                <TextView
                    android:text="@string/kuo"
                    android:textColor="#333333"
                    android:layout_marginLeft="@dimen/dp_270"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_170" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:id="@+id/lvcheng_linear"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_below="@id/kaquan_linear"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">
                <ImageView
                    android:src="@mipmap/icon_me_yigou"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_10" />
                <TextView
                    android:textColor="#333333"
                    android:text="@string/lvcheng"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_11" />

                <TextView
                    android:text="@string/kuo"
                    android:textColor="#333333"
                    android:layout_marginLeft="@dimen/dp_170"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_170" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/collect_linear"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_below="@id/lvcheng_linear"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">
                <ImageView
                    android:src="@mipmap/icon_me_shoucang"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_10" />
                <TextView
                    android:id="@+id/tv_collect"
                    android:textColor="#333333"
                    android:text="@string/my_collect"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_11" />

                <TextView
                    android:text="@string/kuo"
                    android:textColor="#333333"
                    android:layout_marginLeft="@dimen/dp_170"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_170" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/follow_linear"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_below="@id/collect_linear"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <ImageView
                    android:src="@mipmap/icon_me_guanzhu"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_17"
                    android:layout_marginStart="@dimen/dp_10" />
                <TextView
                    android:id="@+id/tv_follow"
                    android:textColor="#333333"
                    android:text="@string/my_guanzhu"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_11" />

                <TextView
                    android:text="@string/kuo"
                    android:textColor="#333333"
                    android:layout_marginLeft="@dimen/dp_170"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_170" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_624"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_18"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_marginLeft="@dimen/dp_12"
            android:src="@mipmap/icon_me_kefu"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_12"
            tools:ignore="ContentDescription" />
        <TextView
            android:text="@string/service"
            android:textSize="@dimen/sp_12"
            android:textColor="#333333"
            android:layout_marginLeft="@dimen/dp_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_7" />


        <ImageView
            android:layout_marginLeft="@dimen/dp_34"
            android:src="@mipmap/icon_me_fankui"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_34"
            tools:ignore="ContentDescription" />
        <TextView
            android:text="@string/feedback"
            android:textSize="@dimen/sp_12"
            android:textColor="#333333"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6" />


        <ImageView
            android:layout_marginLeft="@dimen/dp_34"
            android:src="@mipmap/icon_me_banben"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_34"
            tools:ignore="ContentDescription" />
        <TextView
            android:text="@string/version"
            android:textSize="@dimen/sp_12"
            android:textColor="#333333"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4" />

    </LinearLayout>
    
</RelativeLayout>